# serialwrap

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
apps/: .gitignore  README.md
apps/capture/: index.html  package-lock.json  package.json  vite.config.ts
apps/capture-native/: build-rust.sh
apps/capture-native/SerialWarpCapture.xcodeproj/: project.pbxproj
apps/capture-native/SerialWarpCapture/App/: AppDelegate.swift
apps/capture-native/SerialWarpCapture/Capture/: CaptureConfiguration.swift  CaptureService.swift  CapturedFrame.swift
apps/capture-native/SerialWarpCapture/Controllers/: PreviewViewController.swift
apps/capture-native/SerialWarpCapture/Core/: Errors.swift
apps/capture-native/SerialWarpCapture/Core/Binary/: CRC32C.swift  DataExtensions.swift
apps/capture-native/SerialWarpCapture/Core/Frame/: EncodedFrame.swift  FrameMetadata.swift  FrameSegmenter.swift
apps/capture-native/SerialWarpCapture/Core/Protocol/: FrameHeader.swift  HelloPayload.swift  Packet.swift  PacketHeader.swift  PacketType.swift  PingPongPayloads.swift  SWRPConstants.swift  StartPayload.swift
apps/capture-native/SerialWarpCapture/Display/: DisplayConfiguration.swift  VirtualDisplayManager.swift
apps/capture-native/SerialWarpCapture/Encode/: EncoderConfiguration.swift  NALUConverter.swift  VideoEncoder.swift
apps/capture-native/SerialWarpCapture/Models/: AppState.swift
apps/capture-native/SerialWarpCapture/Pipeline/: FlowControl.swift  PipelineState.swift  StreamingPipeline.swift
apps/capture-native/SerialWarpCapture/Resources/: Info.plist  SerialWarpCapture.entitlements
apps/capture-native/SerialWarpCapture/Services/: StreamingService.swift
apps/capture-native/SerialWarpCapture/Transport/: MockTransport.swift  Transport.swift  USBConstants.swift  USBDeviceManager.swift  USBTransport.swift
apps/capture-native/SerialWarpCapture/Views/: AboutView.swift  AppSettingsView.swift  ContentViewController.swift  DisplaysContentView.swift  MainWindowController.swift  SettingsCardView.swift  SidebarViewController.swift
apps/capture-native/SerialWarpCaptureTests/CoreTests/: CRC32CTests.swift  FrameSegmenterTests.swift  ProtocolTests.swift
apps/capture-native/SerialWarpCaptureTests/PipelineTests/: FlowControlTests.swift
apps/capture-native/rust-bridge/: SerialWarpFFI.swift  SerialWarpFFIFFI.h  SerialWarpFFIFFI.modulemap
apps/capture/src/: App.tsx
apps/capture/src-tauri/: Cargo.toml  tauri.conf.json
apps/capture/src-tauri/capabilities/: default.json
apps/capture/src-tauri/icons/: generate-icons.sh  icon.icns
apps/capture/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/capture/src/components/: PreviewCanvas.tsx  SettingsDialog.tsx
apps/capture/src/components/ui/: button.tsx  select.tsx
apps/capture/src/hooks/: useStore.ts
apps/capture/src/lib/: utils.ts
apps/capture/src/styles/: globals.css
apps/display/: index.html  package-lock.json  package.json  vite.config.ts
apps/display/src/: App.tsx
apps/display/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/display/src-tauri/capabilities/: default.json
apps/display/src-tauri/icons/: generate-icons.sh
apps/display/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/display/src/components/: SettingsDialog.tsx  VideoDisplay.tsx
apps/display/src/components/ui/: dialog.tsx
apps/display/src/hooks/: useStore.ts
apps/display/src/lib/: utils.ts
apps/display/src/styles/: globals.css
bins/serialwarp-sink/: Cargo.toml
bins/serialwarp-sink/src/: main.rs
bins/serialwarp-source/: Cargo.toml
bins/serialwarp-source/src/: main.rs
crates/serialwarp-capture/: Cargo.toml
crates/serialwarp-capture/src/: lib.rs
crates/serialwarp-core/: Cargo.toml
crates/serialwarp-core/src/: error.rs  frame.rs  lib.rs  protocol.rs  usb.rs
crates/serialwarp-decode/: Cargo.toml
crates/serialwarp-decode/src/: lib.rs
crates/serialwarp-encode/: Cargo.toml
crates/serialwarp-encode/src/: lib.rs
crates/serialwarp-render/: Cargo.toml
crates/serialwarp-render/src/: lib.rs
crates/serialwarp-transport/: Cargo.toml
crates/serialwarp-transport/src/: lib.rs  mock.rs  usb.rs
crates/serialwarp-vdisp/: Cargo.toml
crates/serialwarp-vdisp/src/: lib.rs
scripts/: build-release.sh  generate-certs.sh  generate-updater-keys.sh
tests/integration/: Cargo.toml
