[package]
name = "serialwarp-sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serialwarp-core = { workspace = true }
serialwarp-decode = { workspace = true }
serialwarp-render = { workspace = true }
serialwarp-transport = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
