[package]
name = "serialwarp-source"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
serialwarp-core = { workspace = true }
serialwarp-vdisp = { workspace = true }
serialwarp-capture = { workspace = true }
serialwarp-encode = { workspace = true }
serialwarp-transport = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
