[package]
name = "serialwarp-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
serialwarp-core = { workspace = true }
tokio = { workspace = true }
screencapturekit = "1.5"
tracing = { workspace = true }
