[package]
name = "serialwarp-vdisp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
serialwarp-core = { workspace = true }
dispatch = { workspace = true }
core-foundation = { workspace = true }
