[package]
name = "serialwarp-capture-app"
version = "0.1.0"
description = "SerialWarp Capture - macOS screen capture and streaming application"
authors = ["SerialWarp"]
edition = "2021"

[lib]
name = "serialwarp_capture_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# USB device enumeration
nusb = "0.1.9"

# Serialwarp crates
serialwarp-core = { path = "../../../crates/serialwarp-core" }
serialwarp-capture = { path = "../../../crates/serialwarp-capture" }
serialwarp-encode = { path = "../../../crates/serialwarp-encode" }
serialwarp-vdisp = { path = "../../../crates/serialwarp-vdisp" }
serialwarp-transport = { path = "../../../crates/serialwarp-transport" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
